createUser via rest works. postMessage created new user very time you post a message